# amaru

./: .env  .env.example  .gitignore  PYTORCH_BATCH_ANALYSIS.md  PYTORCH_README.md  PYTORCH_UI_DEMO.md  README.md  SERVER_INTEGRATION.md  pyproject.toml  settings.gradle.kts  test_server_example.py
app/: build.gradle.kts
app/src/androidTest/java/com/amaru/amaru/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: full_model_mobile.pt
app/src/main/java/com/amaru/amaru/: FlowAnalyzer.kt  MainActivity.kt  NetworkFlowStats.kt  NetworkMonitor.kt  NetworkMonitoringService.kt  PyTorchMalwareDetector.kt
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: file_provider_paths.xml
app/src/test/java/com/amaru/amaru/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
src/amaru/: logger.py  main.py  utils.py
src/amaru/config/: config.py  config.yml
src/amaru/data_processing/: balance_dataset.py  clean_dataset.py  feature_selection.py
src/notebooks/preprocessing/: blancing_dataset.ipynb  clean_dataset.ipynb  config.ipynb  feature_selection.ipynb
